--- a/fun/Makefile
+++ b/fun/Makefile
@@ -3,19 +3,23 @@ CABAL-BUILD-FLAGS     :=
 
 all : haskell
 
-src/CCO/HM/AG.hs : src/CCO/HM/AG.ag src/CCO/HM/AG/Base.ag
-	uuagc -Hdcfws --self -P src/CCO/HM src/CCO/HM/AG.ag
+src/lib/CCO/HM/AG.hs : src/lib/CCO/HM/AG.ag src/lib/CCO/HM/AG/Base.ag src/lib/CCO/HM/AG/HMToCR.ag
+	uuagc -Hdcfws --self -P src/lib/CCO/HM src/lib/CCO/HM/AG.ag
 
-src/CCO/SystemF/AG.hs : src/CCO/SystemF/AG.ag src/CCO/SystemF/AG/Base.ag \
-		src/CCO/SystemF/AG/Printing.ag
-	uuagc -Hdcfws --self -P src/CCO/SystemF src/CCO/SystemF/AG.ag
+src/lib/CCO/SystemF/AG.hs : src/lib/CCO/SystemF/AG.ag src/lib/CCO/SystemF/AG/Base.ag \
+		src/lib/CCO/SystemF/AG/Printing.ag
+	uuagc -Hdcfws --self -P src/lib/CCO/SystemF src/lib/CCO/SystemF/AG.ag
 
-src/CCO/Core/AG.hs : src/CCO/Core/AG.ag src/CCO/Core/AG/Base.ag \
-		src/CCO/Core/AG/ToCoreRun.ag
-	uuagc -Hdcfws --self -P src/CCO/Core src/CCO/Core/AG.ag
+src/lib/CCO/Core/AG.hs : src/lib/CCO/Core/AG.ag src/lib/CCO/Core/AG/Base.ag \
+		src/lib/CCO/Core/AG/ToCoreRun.ag
+	uuagc -Hdcfws --self -P src/lib/CCO/Core src/lib/CCO/Core/AG.ag
 
-haskell : src/CCO/Core/AG.hs src/CCO/HM/AG.hs src/CCO/SystemF/AG.hs
+haskell : src/lib/CCO/Core/AG.hs src/lib/CCO/HM/AG.hs src/lib/CCO/SystemF/AG.hs
 	cabal configure $(CABAL-CONFIGURE-FLAGS)
 	cabal build $(CABAL-BUILD-FLAGS)
 
-.PHONY : haskell
+clean:
+	cabal clean
+	rm -f "src/lib/CCO/HM/AG.hs" "src/lib/CCO/SystemF/AG.hs" "src/lib/CCO/Core/AG.hs"
+
+.PHONY : all haskell clean
