--- a/mf/mf.cabal
+++ b/mf/mf.cabal
@@ -26,5 +26,6 @@ executable mf
                        AttributeGrammar
   build-depends:       base >= 4 && < 5,
                        containers == 0.5.*,
-                       array == 0.5.*
+                       array == 0.5.*,
+                       uu-cco
   hs-source-dirs:      src                     
