--- a/mf/mf.cabal
+++ b/mf/mf.cabal
@@ -27,6 +27,7 @@ executable mf
                        MonotoneFrameworks.Lattice
                        MonotoneFrameworks.Instance
                        MonotoneFrameworks.MaximumFixpoint
+                       Analyses.ConstantPropagation
   build-depends:       base >= 4 && < 5,
                        containers == 0.5.*,
                        array == 0.5.*,
