--- a/mf/mf.cabal
+++ b/mf/mf.cabal
@@ -25,8 +25,8 @@ executable mf
                        Dev
                        AttributeGrammar
                        Analyses.ConstantPropagation
+                       MonotoneFrameworks.Embellished
                        MonotoneFrameworks.Lattice
-                       MonotoneFrameworks.Instance
                        MonotoneFrameworks.MaximumFixpoint
                        Util.Printing
   build-depends:       base >= 4 && < 5,
